--- a/lib/OrdinaryDiffEqCore/Project.toml
+++ b/lib/OrdinaryDiffEqCore/Project.toml
@@ -1,7 +1,7 @@
 name = "OrdinaryDiffEqCore"
 uuid = "bbf590c4-e513-4bbe-9b18-05decba2e5d8"
 authors = ["ParamThakkar123 <paramthakkar864@gmail.com>"]
-version = "3.4.0"
+version = "3.4.1"
 
 [deps]
 SciMLOperators = "c0aeaf25-5076-4817-a8d5-81caf7dfa961"
@@ -88,7 +88,7 @@ InteractiveUtils = "1.10"
 RecursiveArrayTools = "3.36"
 FastPower = "1.1"
 Logging = "1.10"
-Mooncake = "0.4"
+Mooncake = "0.4, 0.5"
 AllocCheck = "0.2"
 DiffEqBase = "6.194"
 FillArrays = "1.13"
